--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -57,7 +57,7 @@
                 <h4>¡Vamos a desempolvar la estantería!</h4>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3" *ngFor="let book of uploadedBooksList">
-                <div *ngIf="book.state == '-1'" routerLink="/confirmExchanges" class="reservedMark d-flex align-items-center">
+                <div *ngIf="book.reserved > 0" routerLink="/confirmExchanges" class="reservedMark d-flex align-items-center">
                     <i class="bi bi-bookmark-star-fill"></i>
                     <span>Reservado</span>
                 </div>
