--- a/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row board" *ngFor="let book of bookBuyReservedList; let i = index">
-        <h4 class="text-center my-4">{{userBuyReservedList[i].name}} ha solicitado intercambio de tu libro:</h4>
+        <h4 class="text-center my-4">{{userBuyReservedList[i].name}} ha solicitado la compra de tu libro:</h4>
 
         <div class="col-3 d-flex flex-column align-items-center">
             <img src="data:image/jpg;base64,{{userBuyReservedList[i].img}}" alt="" class="imgProfile">
@@ -22,7 +22,8 @@
                 {{userBuyReservedList[i].telegram || 'No especificado'}}
             </p>
 
-            <button class="btn bgSecundario my-2">Confirmar intercambio</button>
+            <button (click)="showConfirmModal = true; bookSelected = i;" class="btn bgSecundario my-2">Finalizar compra
+                <i class="bi bi-bookmark-check"></i></button>
         </div>
         <div class="col-3">
             <h5 class="bold text-end">Sobre el libro:</h5>
@@ -39,12 +40,45 @@
             </p>
 
             <div class="d-flex justify-content-end">
-                <button class="btn outlineSecondary my-2">Rechazar intercambio</button>
+                <button class="btn outlineSecondary my-2">Rechazar compra <i class="bi bi-bookmark-x"></i></button>
             </div>
         </div>
         <div class="col-3 d-flex flex-column align-items-center">
-            <img src="data:image/jpg;base64,{{book.img}}" alt="" class="imgProfile">
+            <img src="data:image/jpg;base64,{{book.img}}" alt="" class="imgCover">
             <h5 class="bold my-4">El Imperio Final</h5>
+        </div>
+    </div>
+</div>
+
+<div id="myModal" class="modal" [style]="showConfirmModal ? 'display: block;' : 'display: none;'">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="row mb-4 d-flex justify-content-center">
+            <div class="col-11">
+                <h2 class="text-center mt-3 ms-5">¿Finalizar la compra de el libro {{
+                    bookBuyReservedList[bookSelected].title }}?
+                </h2>
+            </div>
+            <div class="col-1">
+                <i class="bi bi-x close" (click)="showConfirmModal = false"></i>
+            </div>
+            <div class="col-10">
+                <p class="text-center">Al hacer click en <span class="bold">"Finalizar compra"</span> confirmas que te
+                    has puesto en contacto con el usuario que solicitó la compra y habeís llegado a un acuerdo en la
+                    compra de tu libro.
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6 d-flex justify-content-end">
+                <button class="btn outlineSecondary" (click)="showConfirmModal = false">Cancelar <i
+                        class="bi bi-arrow-counterclockwise"></i></button>
+            </div>
+            <div class="col-6 d-flex justify-content-start">
+                <button (click)="confirmPurchase(bookBuyReservedList[bookSelected].id)" class="btn bgSecundario">Finalizar compra <i
+                        class="bi bi-bookmark-check"></i></button>
+            </div>
         </div>
     </div>
 </div>
