(Client) Remodelación de los botones. Al hacer hover se agrandan

--- a/Cliente-Angular/src/styles.scss
+++ b/Cliente-Angular/src/styles.scss
@@ -19,6 +19,11 @@ body {
 
 .btn {
     color: white !important; 
+
+}
+button:hover {
+    transform: scale(1.1);
+    transition: all 300ms ease;
 }
 
 .outlineSecondary {
