--- a/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/products/products.component.scss
@@ -26,7 +26,7 @@ input {
 
 .up {
     position: fixed;
-    top: 500px;
+    top: 440px;
     right: 80px;
     width: 50px;
     height: 50px;
@@ -35,15 +35,20 @@ input {
     border-radius: 25px;
     cursor: pointer;
 
-    :hover {
+    /* :hover {
         transform: scale(1.3);
         transition: all 300ms ease;
-    }
+    } */
 
     i {
         color: white;
         font-size: 30px;
     }
+}
+
+.up:hover {
+    transform: scale(1.2);
+    transition: all 300ms ease;
 }
 
 .noResult {
