--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="reserved" class="mt-4 container text-center alert alert-warning">
-    Se ha reservado el libro, será el dueño el que se ponga en contacto contigo.
+    Se ha reservado el libro, será el dueño quien que se ponga en contacto contigo.
 </div>
 <div *ngIf="reserveError" class="mt-4 container text-center alert alert-warning">
     No se ha podido reservar el libro.
@@ -89,11 +89,11 @@
         <div class="col-7 bg-white profile">
             <div class="row">
                 <div class="col-7 mt-4 d-flex flex-column align-self-center">
-                    <h3 class="text-center bold mt-2">{{user.name}} {{user.surnames}}</h3>
+                    <h3 class="text-center bold mt-2">{{userOwner.name}} {{userOwner.surnames}}</h3>
                     <p class="text-center mt-4">8 productos</p>
-                    <p class="text-center mt-4"><span class="bold">Ubicación: &nbsp;</span> {{user.location}}</p>
+                    <p class="text-center mt-4"><span class="bold">Ubicación: &nbsp;</span> {{userOwner.location}}</p>
                     <div class="col-12 d-flex justify-content-center">
-                        <button routerLink="/profile" [queryParams]="{'idUser': user.id}"
+                        <button routerLink="/profile" [queryParams]="{'idUser': userOwner.id}"
                             class="btn bgSecundario mt-3">Visitar perfil <i
                                 class="bi bi-person-lines-fill"></i></button>
                     </div>
@@ -108,7 +108,7 @@
                 <div class="col-5">
                     <div class="row">
                         <div class="col-12 mt-4 d-flex align-items-center">
-                            <img class="imgProfile mt-5" src="data:image/jpg;base64,{{user.img}}" alt="">
+                            <img class="imgProfile mt-5" src="data:image/jpg;base64,{{userOwner.img}}" alt="">
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
 <div id="myModal" class="modal" [style]="showModal ? 'display: block;' : 'display: none;'">
     <!-- Modal content -->
     <div class="modal-content">
-        <div class="row mb-4">
+        <div class="row">
             <div class="col-11">
                 <h2 *ngIf="bookList.length" class="text-center mt-3 ms-5">Seleccione uno de sus libros para intercambiar
                 </h2>
@@ -130,6 +130,13 @@
             <div class="col-1">
                 <i class="bi bi-x close" (click)="showModal = false"></i>
                 <!-- <span (click)="showModal = false" class="close">&times;</span> -->
+            </div>
+        </div>
+        <div class="row mb-4 d-flex justify-content-center">
+            <div class="col-10">
+                <p class="text-center">Al hacer click en <span class="bold">"Seleccionar"</span> en un libro, se le informará al
+                    dueño de "{{book.title}}" de tu solicitud de intercambio con tu propuesta de libro. Será él quien decida
+                    si aceptar el intercambio y ponerse en contacto contigo o no.</p>
             </div>
         </div>
 
@@ -147,7 +154,8 @@
                 </div>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <button class="btn bgSecundario">Seleccionar</button>
+                        <button (click)="confirmExchange(book, userOwner.id)" class="btn bgSecundario">Seleccionar <i
+                                class="bi bi-capslock"></i></button>
                     </div>
                 </div>
             </div>
@@ -157,7 +165,7 @@
                 <button class="btn outlineSecondary" (click)="showModal = false">Cancelar <i
                         class="bi bi-arrow-counterclockwise"></i></button>
             </div>
-            <div class="col-6 d-flex justify-content-center">
+            <div *ngIf="!bookList.length" class="col-6 d-flex justify-content-center">
                 <button routerLink="/uploadBook" class="btn bgSecundario">Subir un libro <i
                         class="bi bi-arrow-up-circle"></i></button>
             </div>
