--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
@@ -57,11 +57,12 @@
 
 .upload {
     position: fixed;
-    top: 400px;
+    top: 390px;
     right: 0;
     width: 300px;
     height: 200px;
     z-index: 999;
+    margin-right: -23px;
 }
 
 .bi {
