--- a/Cliente-Angular/src/styles.scss
+++ b/Cliente-Angular/src/styles.scss
@@ -15,6 +15,7 @@
 body {
     background: linear-gradient(to bottom, rgba(211, 149, 75, 1), white) no-repeat;
     font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
 }
 
 .btn {
