--- a/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
@@ -1,6 +1,9 @@
 <div *ngIf="soldBook" class="mt-4 container text-center alert alert-warning">
     Se ha completado la venta del libro {{soldBook}}.
 </div>
+<div *ngIf="petitionerExchanged" class="mt-4 container text-center alert alert-warning">
+    ¡Has realizado un intercambio con {{petitionerExchanged}}!
+</div>
 
 <h3 class="text-center my-4">Intercambios y ventas pendientes</h3>
 
@@ -134,15 +137,15 @@
                     </div>
                     <div class="row">
                         <p>Correo electrónico: <br>
-                            {{userBuyReservedList[i].email}}
+                            {{petitionerExchangeReservedList[i].email}}
                         </p>
 
                         <p class="mt-2">Número de teléfono: <br>
-                            {{userBuyReservedList[i].tlf}}
+                            {{petitionerExchangeReservedList[i].tlf}}
                         </p>
 
                         <p class="mt-2">Telegram: <br>
-                            {{userBuyReservedList[i].telegram || 'No especificado'}}
+                            {{petitionerExchangeReservedList[i].telegram || 'No especificado'}}
                         </p>
                     </div>
                 </div>
@@ -177,7 +180,7 @@
     </div>
 </div>
 
-<div *ngIf="!bookBuyReservedList && !bookPExchangeReservedList"
+<div *ngIf="!bookBuyReservedList.length && !bookPExchangeReservedList.length"
     class="container board marginY p-4 d-flex flex-column justify-content-center">
     <h4 class="text-center">¡Vaya, parece que ningún usuario ha solicitado algún intercambio ni compra de tus libros!
     </h4>
@@ -187,7 +190,7 @@
     </div>
 </div>
 
-<div id="myModal" class="modal" [style]="showConfirmBuyModal ? 'display: block;' : 'display: none'">
+<div *ngIf="showConfirmBuyModal" id="myModal" class="modal" [style]="showConfirmBuyModal ? 'display: block;' : 'display: none'">
     <!-- Modal content -->
     <div class="modal-content">
         <div class="row mb-4 d-flex justify-content-center">
@@ -221,7 +224,7 @@
     </div>
 </div>
 
-<div id="myModal" class="modal" [style]="showConfirmExchangeModal ? 'display: block;' : 'display: none'">
+<div *ngIf="showConfirmExchangeModal" id="myModal" class="modal" [style]="showConfirmExchangeModal ? 'display: block;' : 'display: none'">
     <!-- Modal content -->
     <div class="modal-content">
         <div class="row mb-4 d-flex justify-content-center">
@@ -262,7 +265,8 @@
             <div class="col-10">
                 <p class="text-center">Al hacer click en <span class="bold">"Finalizar intercambio"</span> confirmas que
                     te
-                    has puesto en contacto con el usuario que solicitó el intercambio y habeís llegado a un acuerdo en el
+                    has puesto en contacto con el usuario que solicitó el intercambio y habeís llegado a un acuerdo en
+                    el
                     intercambio de vuestros libros.
                 </p>
             </div>
@@ -274,9 +278,11 @@
                         class="bi bi-arrow-counterclockwise"></i></button>
             </div>
             <div class="col-6 d-flex justify-content-start">
-                <button
-                    (click)="confirmPurchase(bookBuyReservedList[bookSelected].id, bookBuyReservedList[bookSelected].title)"
-                    class="btn bgSecundario">Finalizar intercambio<i class="bi bi-bookmark-check"></i></button>
+                <button (click)="confirmExchange(
+                        bookPExchangeReservedList[exchangeSelected],
+                        petitionerExchangeReservedList[exchangeSelected],
+                        bookOExchangeReservedList[exchangeSelected].id)" class="btn bgSecundario">Finalizar intercambio<i
+                        class="bi bi-bookmark-check"></i></button>
             </div>
         </div>
     </div>
