--- a/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
@@ -4,6 +4,9 @@
 <div *ngIf="petitionerExchanged" class="mt-4 container text-center alert alert-warning">
     ¡Has realizado un intercambio con {{petitionerExchanged}}!
 </div>
+<div *ngIf="cancelExchangePertioner" class="mt-4 container text-center alert alert-warning">
+    Has cancelado un intercambio con {{cancelExchangePertioner}}.
+</div>
 
 <h3 class="text-center my-4">Intercambios y ventas pendientes</h3>
 
@@ -170,7 +173,7 @@
                                 <i class="bi bi-bookmark-check"></i></button>
                         </div>
                         <div class="col-12 col-sm-6 mt-3 mt-sm-0 d-flex justify-content-center">
-                            <button class="btn outlineSecondary">Rechazar intercambio <i
+                            <button (click)="showCancelExchangeModal = true" class="btn outlineSecondary">Rechazar intercambio <i
                                     class="bi bi-bookmark-x"></i></button>
                         </div>
                     </div>
@@ -190,7 +193,8 @@
     </div>
 </div>
 
-<div *ngIf="showConfirmBuyModal" id="myModal" class="modal" [style]="showConfirmBuyModal ? 'display: block;' : 'display: none'">
+<div *ngIf="showConfirmBuyModal" id="myModal" class="modal"
+    [style]="showConfirmBuyModal ? 'display: block;' : 'display: none'">
     <!-- Modal content -->
     <div class="modal-content">
         <div class="row mb-4 d-flex justify-content-center">
@@ -224,7 +228,8 @@
     </div>
 </div>
 
-<div *ngIf="showConfirmExchangeModal" id="myModal" class="modal" [style]="showConfirmExchangeModal ? 'display: block;' : 'display: none'">
+<div *ngIf="showConfirmExchangeModal" id="myModal" class="modal"
+    [style]="showConfirmExchangeModal ? 'display: block;' : 'display: none'">
     <!-- Modal content -->
     <div class="modal-content">
         <div class="row mb-4 d-flex justify-content-center">
@@ -281,7 +286,69 @@
                 <button (click)="confirmExchange(
                         bookPExchangeReservedList[exchangeSelected],
                         petitionerExchangeReservedList[exchangeSelected],
-                        bookOExchangeReservedList[exchangeSelected].id)" class="btn bgSecundario">Finalizar intercambio<i
+                        bookOExchangeReservedList[exchangeSelected].id)" class="btn bgSecundario">Finalizar
+                    intercambio<i class="bi bi-bookmark-check"></i></button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div *ngIf="showCancelExchangeModal" id="myModal" class="modal"
+    [style]="showCancelExchangeModal ? 'display: block;' : 'display: none'">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="row mb-4 d-flex justify-content-center">
+            <div class="col-11">
+                <h2 class="text-center mt-3 ms-5">¿Quieres cancelar el intercambio con
+                    {{petitionerExchangeReservedList[exchangeSelected].name}}
+                    {{petitionerExchangeReservedList[exchangeSelected].surnames}}?
+                </h2>
+            </div>
+            <div class="col-1">
+                <i class="bi bi-x close" (click)="showCancelExchangeModal = false"></i>
+            </div>
+
+            <div class="col-10">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-4">
+                        <h5 class="text-center">Ofrece:</h5>
+                        <div class=" d-flex flex-column align-items-center">
+                            <img src="data:image/jpg;base64,{{bookPExchangeReservedList[exchangeSelected].img}}" alt=""
+                                class="imgMiniCover">
+                        </div>
+                        <h5 class="bold my-4 text-center">{{bookPExchangeReservedList[exchangeSelected].title}}</h5>
+                    </div>
+                    <div class="col-4 col-lg-2 d-flex justify-content-center align-items-center">
+                        <i class="bi bi-arrow-left-right exchangeIcon"></i>
+                    </div>
+                    <div class="col-4">
+                        <h5 class="text-center">Solicita:</h5>
+                        <div class=" d-flex flex-column align-items-center">
+                            <img src="data:image/jpg;base64,{{bookOExchangeReservedList[exchangeSelected].img}}" alt=""
+                                class="imgMiniCover">
+                        </div>
+                        <h5 class="bold my-4 text-center">{{ bookOExchangeReservedList[exchangeSelected].title }}</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-10">
+                <p class="text-center">Al hacer click en <span class="bold">"Confirmar"</span> cancelarás el intercambio
+                    y tu libro dejará de estar reservado.
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6 d-flex justify-content-end">
+                <button class="btn outlineSecondary" (click)="showCancelExchangeModal = false">Volver <i
+                        class="bi bi-arrow-counterclockwise"></i></button>
+            </div>
+            <div class="col-6 d-flex justify-content-start">
+                <button (click)="cancelExchange(
+                    bookPExchangeReservedList[exchangeSelected],
+                    petitionerExchangeReservedList[exchangeSelected],
+                    bookOExchangeReservedList[exchangeSelected].id);" class="btn bgSecundario">Confirmar<i
                         class="bi bi-bookmark-check"></i></button>
             </div>
         </div>
